<resources>
    <string name="app_name">Tip Time</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (15%)</string>
    <string name="okay">Okay (10%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service_input">Cost of Service</string>
    <string name="round_up_toggle_text">Round up</string>
    <string name="calculate_text">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>